# pypolycontain

./: pyproject.toml
examples/: containment_example.py
pypolycontain/: containment.py  conversions.py  operations.py  projection.py
